[gd_scene load_steps=4 format=3 uid="uid://bilglsx04yfsi"]

[ext_resource type="Script" path="res://addons/tattomoosa.spinner/spinner.gd" id="1_4hpie"]
[ext_resource type="Script" path="res://demo/spinner_controls.gd" id="2_foj1l"]

[sub_resource type="Theme" id="Theme_jq757"]

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_jq757")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Spinner" type="TextureProgressBar" parent="CenterContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
value = 20.0
script = ExtResource("1_4hpie")

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Label"

[node name="PanelContainer" type="PanelContainer" parent="." node_paths=PackedStringArray("spinner")]
layout_mode = 0
offset_right = 14.0
offset_bottom = 12.0
script = ExtResource("2_foj1l")
spinner = NodePath("../CenterContainer/PanelContainer/HBoxContainer/Spinner")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Status"

[node name="StatusSelectorButton" type="MenuButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "CURRENT"
flat = false

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Progress"

[node name="ProgressingValueSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 66.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Diameter
"

[node name="DiameterSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 8.0
max_value = 64.0
value = 16.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Width"

[node name="WidthSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
value = 0.01

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Icon Size
"

[node name="IconScaleSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.2
max_value = 1.0
step = 0.01
value = 0.2
